--- a/app/src/main/res/layout/fragment_moview_group.xml
+++ b/app/src/main/res/layout/fragment_moview_group.xml
@@ -2,14 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
-             android:background="@color/colorAccent"
              android:layout_height="match_parent"
              tools:context=".ui.screen.movies_group.MoviesGroupFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
-
+    <android.support.v7.widget.RecyclerView
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/rv_movies_group_movies"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
 </FrameLayout>
