--- a/app/src/main/res/layout/item_recycler_view_movie.xml
+++ b/app/src/main/res/layout/item_recycler_view_movie.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:padding="4dp"
+              android:background="@color/cardBackgroundColor"
               android:layout_width="176dp"
               android:layout_height="256dp">
     <ImageView android:layout_width="match_parent"
                android:id="@+id/iv_item_rv"
+               android:scaleType="centerCrop"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
     <LinearLayout
+            android:id="@+id/iv_info_container_rv"
             android:background="#d1d1d1"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:layout_height="match_parent">
         <TextView android:layout_width="match_parent"
+                  android:id="@+id/tv_item_name_rv"
+                  android:textSize="@dimen/cardTitle"
                   android:text="Name"
+                  android:lines="1"
+                  android:ellipsize="end"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:layout_height="match_parent"/>
@@ -22,6 +30,7 @@
                   android:text="Rating"
                   android:gravity="center"
                   android:layout_weight="1"
+                  android:id="@+id/tv_item_rating_rv"
 
                   android:layout_height="match_parent"/>
 
