--set retain instance and refactored item xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#36474F</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#0F2027</color>
     <color name="colorAccent">#D81B60</color>
     <color name="backgroundColor">#697982</color>
     <color name="cardBackgroundColor">#203138</color>
