--- a/app/src/main/res/layout/fragment_moview_group.xml
+++ b/app/src/main/res/layout/fragment_moview_group.xml
@@ -13,6 +13,7 @@
         <TextView android:layout_width="wrap_content"
                   android:textSize="@dimen/cardTitle"
                   android:layout_marginLeft="8dp"
+                  android:textStyle="bold"
                   android:layout_gravity="center_vertical"
                   android:textColor="@android:color/white"
                   android:layout_height="wrap_content"
