--- a/app/src/main/res/layout/item_recycler_view_movie.xml
+++ b/app/src/main/res/layout/item_recycler_view_movie.xml
@@ -3,8 +3,8 @@
               android:orientation="vertical"
               android:padding="4dp"
               android:background="@color/cardBackgroundColor"
-              android:layout_width="176dp"
-              android:layout_height="256dp">
+              android:layout_width="192dp"
+              android:layout_height="384dp">
     <ImageView android:layout_width="match_parent"
                android:id="@+id/iv_item_rv"
                android:scaleType="centerCrop"
@@ -17,10 +17,13 @@
             android:layout_width="match_parent"
             android:layout_weight="3"
             android:layout_height="match_parent">
+
         <TextView android:layout_width="match_parent"
                   android:id="@+id/tv_item_name_rv"
                   android:textSize="@dimen/cardTitle"
                   android:text="Name"
+                  android:layout_marginLeft="4dp"
+                  android:layout_marginRight="4dp"
                   android:lines="1"
                   android:ellipsize="end"
                   android:layout_weight="1"
