--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.screen.movies_details.MoviesDetailsFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:orientation="vertical"
+              android:background="@color/backgroundColor"
+              android:layout_height="match_parent"
+              tools:context=".ui.screen.movies_group.MoviesGroupFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+        <TextView android:layout_width="wrap_content"
+                  android:textSize="@dimen/cardTitle"
+                  android:layout_marginLeft="8dp"
+                  android:textStyle="bold"
+                  android:layout_gravity="center_vertical"
+                  android:textColor="@android:color/white"
+                  android:layout_height="wrap_content"
+                  android:text="Movies"/>
 
-</FrameLayout>
+
+
+</LinearLayout>
