--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -1,21 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:orientation="vertical"
-              android:background="@color/backgroundColor"
-              android:layout_height="match_parent"
-              tools:context=".ui.screen.movies_group.MoviesGroupFragment">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:background="@color/backgroundColor"
+            android:layout_height="match_parent"
+            tools:context=".ui.screen.movies_group.MoviesGroupFragment">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            tools:context=".ui.screen.movies_group.MoviesGroupFragment">
 
-        <TextView android:layout_width="wrap_content"
-                  android:textSize="@dimen/cardTitle"
-                  android:layout_marginLeft="8dp"
-                  android:textStyle="bold"
-                  android:layout_gravity="center_vertical"
-                  android:textColor="@android:color/white"
-                  android:layout_height="wrap_content"
-                  android:text="Movies"/>
+        <FrameLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <ProgressBar android:layout_width="wrap_content"
+                         android:id="@+id/pb_movie_detail_cover"
+                         android:layout_gravity="center"
+                         style="@android:style/Widget.ProgressBar.Small"
+                         android:layout_height="wrap_content"/>
+
+            <ImageView android:layout_width="match_parent"
+                       android:scaleType="centerCrop"
+                       android:id="@+id/iv_movie_detail_cover"
+                       android:layout_height="240dp"
+
+            />
+
+        </FrameLayout>
+
+        <LinearLayout android:layout_weight="1"
+                      android:orientation="vertical"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent">
+            <TextView android:layout_width="wrap_content"
+                      android:textSize="29dp"
+                      android:textColor="#ffffff"
+                      android:text="Name"
+                      android:id="@+id/tv_movie_detail_title"
+                      android:textStyle="bold"
+                      android:layout_height="wrap_content"
+                      android:layout_margin="8dp"/>
+            <LinearLayout
+                    android:layout_margin="8dp"
+                    android:orientation="horizontal" android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView android:layout_width="match_parent"
+                          android:id="@+id/tv_movie_description_title"
+                          android:textColor="#cfcfcf"
+                          android:layout_weight="1"
+                          android:layout_height="wrap_content"
+                          android:text="Arthur Curry learns that he is the heir to the underwater kingdom of Atlantis, and must step forward to lead his people and be a hero to the world."/>
+
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_margin="8dp"
+                    android:orientation="horizontal" android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView android:layout_width="match_parent"
+                          android:layout_weight="1"
+                          android:textColor="#cfcfcf"
+
+                          android:layout_height="wrap_content"
+                          android:text="@string/title_popularity"/>
+                <TextView android:layout_width="match_parent"
+                          android:layout_weight="1"
+                          android:id="@+id/tv_movie_popularity_title"
+                          android:textColor="#cfcfcf"
+
+                          android:gravity="center"
+                          android:layout_height="wrap_content" android:text="title1"/>
+
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_margin="8dp"
+                    android:orientation="horizontal" android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView android:layout_width="match_parent"
+                          android:layout_weight="1"
+                          android:textColor="#cfcfcf"
+
+                          android:layout_height="wrap_content"
+                          android:text="@string/title_release_date"/>
+                <TextView android:layout_width="match_parent"
+                          android:layout_weight="1"
+                          android:textColor="#cfcfcf"
+
+                          android:id="@+id/tv_movie_date_title"
+
+                          android:gravity="center"
+                          android:layout_height="wrap_content" android:text="title1"/>
+
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_margin="8dp"
+                    android:orientation="horizontal" android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView android:layout_width="match_parent"
+                          android:layout_weight="1"
+                          android:textColor="#cfcfcf"
+
+                          android:layout_height="wrap_content"
+                          android:text="@string/title_vote_count"/>
+                <TextView android:layout_width="match_parent"
+                          android:layout_weight="1"
+                          android:id="@+id/tv_movie_vote_title"
+                          android:textColor="#cfcfcf"
+
+                          android:gravity="center"
+                          android:layout_height="wrap_content" android:text="title1"/>
+
+            </LinearLayout>
 
 
+        </LinearLayout>
 
-</LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
