--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -35,7 +35,7 @@
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
             <TextView android:layout_width="wrap_content"
-                      android:textSize="29dp"
+                      android:textSize="29sp"
                       android:textColor="#ffffff"
                       android:text="Name"
                       android:id="@+id/tv_movie_detail_title"
